--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
   justify-content: center;
   align-items: center;
   overflow: hidden;
-  background: url('../public/bg6.jpeg') repeat-x; 
+  background: url('./bg6.jpeg') repeat-x; 
   animation: moveBackground 60s linear infinite; 
 }
 
