--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-/* src/App.css */
 @keyframes moveBackground {
   0% {
     background-position: 0 0;
@@ -14,7 +13,7 @@
   justify-content: center;
   align-items: center;
   overflow: hidden;
-  background: url('./bg6.jpeg') repeat-x; 
+  background: url('../public/bg6.jpeg') repeat-x; 
   animation: moveBackground 60s linear infinite; 
 }
 
